# pytaxes

./: .gitignore  README.md  pyproject.toml
src/: taxes.py
